apps/base/download/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: download
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: radarr.mellor.dev
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: internal
  rules:
  - host: radarr.mellor.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
  tls: 
  - secretName: radarr.mellor.dev
    hosts:
    - radarr.mellor.dev
